<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by Sungbin Ji on 2021. 1. 30.
  ~ Copyright (c) 2021. Sungbin Ji. All rights reserved.
  ~
  ~ SpakChat license is under the MIT license.
  ~ SEE LICENSE: https://github.com/sungbin5304/SpakChat/blob/master/LICENSE
  -->

<resources>
    <string name="app_name">SpakChat</string>
    <string name="action">action</string>
    <string name="cancel">닫기</string>

    <string name="test_clear_room">room 초기화</string>

    <string name="image_transition">transition</string>

    <string name="image_description_favorite">favorite-star</string>
    <string name="image_description_search">search</string>
    <string name="image_description_online_status">online status</string>
    <string name="image_description_back">back</string>
    <string name="image_description_send">send</string>
    <string name="image_description_logo">logo</string>
    <string name="image_description_edit_profile">edit-profile</string>
    <string name="image_description_background_image">profile-background-image</string>
    <string name="image_description_camera">image-camera</string>

    <string name="main_navigation_chatting">채팅</string>
    <string name="main_navigation_call">전화</string>
    <string name="main_navigation_contact">연락처</string>
    <string name="main_navigation_more">더보기</string>
    <string name="main_new_call">새로운 전화</string>
    <string name="main_new_chat">새로운 채팅</string>
    <string name="main_new_contact">새로운 연락처</string>

    <string name="register_description">기존 채팅앱들을 대체할\n새로운 채팅 앱</string>
    <string name="register_dialog_singup">회원가입</string>
    <string name="register_dialog_signin">로그인</string>
    <string name="register_dialog_add_account">계정 추가</string>
    <string name="register_dialog_description_profile_picture">프로필 사진</string>
    <string name="register_dialog_email">이메일</string>
    <string name="register_dialog_nickname">닉네임</string>
    <string name="register_dialog_password">비밀번호</string>
    <string name="register_dialog_password_confirm">비밀번호 확인</string>
    <string name="register_dialog_welcome_back">돌아오신걸 환영합니다!</string>
    <string name="register_cant_load_picture">권한 사용이 거부되어 사진을 불러올 수 없어요.</string>
    <string name="register_permission_denied">권한 사용이 거부되어 사진을 불러올 수 없어요.\n앱 설정에서 권한 사용을 수락해 주세요.</string>
    <string name="register_need_permission_for_load_picture">사진들을 불러오기 위해 내부 메모리에 접근 권한이 필요해요.</string>
    <string name="register_done">가입이 완료되었어요 :)</string>
    <string name="register_input_all">모두 입력해 주세요</string>
    <string name="register_dialog_confirm_code">인증코드</string>
    <string name="register_dialog_label_confirm_code">인증코드가\n%s\n이메일로 발송되었어요.\n인증코드를 입력해 주세요.</string>
    <string name="register_label_signup_code">SpakChat 회원가입 인증코드</string>
    <string name="register_value_signup_code">😍 우선 SpakChat에 가입해 주셔서 감사해요!\n\n[ %s ]\n\n위 코드를 사용해 SpakChat 가입을 완료해 주세요 :)</string>
    <string name="register_confirm_code">인증코드</string>
    <string name="register_confirm">인증</string>
    <string name="register_not_match_confirm_code">인증코드가 잘못되었어요.</string>
    <string name="register_not_match_email_pattern">이메일 형식에 맞게 입력해 주세요</string>
    <string name="register_nickname_too_long">닉네임이 너무 길어요</string>
    <string name="register_input_eight_length">8자 이상 입력해 주세요</string>
    <string name="register_not_match_password_confirm">비밀번호가 일치하지 않아요</string>

    <string name="login_welcome">%s님 환영합니다!</string>
    <string name="login_unknown_email">존재하지 않는 이메일 이에요.</string>
    <string name="login_not_match_email_password">이메일과 비밀번호가 일치하지 않아요.</string>
    <string name="login_default_status_message">새로 가입했어요!</string>

    <string name="exception_except">오류가 발생했습니다 😔</string>
    <string name="exception_preview_except">getWifiLinkLayerStats_1_3_Internal(l.934) failed {.code = ERROR_NOT_SUPPORTED, .description = }</string>

    <string name="fragment_chat_online">온라인</string>

    <string name="call_call">전화</string>

    <string name="user_preview_name">zmo__</string>
    <string name="user_preview_id">sungbin_dev</string>
    <string name="user_preview_last_online">어제 오후 7시까지 접속함</string>
    <string name="user_preview_status_message">성빈 프로그래밍 잘하게 해주세요!!!</string>

    <string name="chat_input_message">메시지 입력…</string>
    <string name="chat_preview_message">성빈 프로그래밍 잘하게 해주세요!!!</string>
    <string name="chat_preview_last_message">사진을 보냈어요.</string>
    <string name="chat_preview_time">오전 09:47</string>
    <string name="chat_preview_unread_count">99</string>

    <string name="splash_non_internet">인터넷 없음!</string>
    <string name="splash_need_internet">SpakChat을 이용하려면 인터넷에 연결되있어야 해요 😢</string>

</resources>