<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Message"
            type="me.sungbin.spakchat.model.message.Message" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorBackgroundWhite"
        android:paddingStart="@dimen/margin_default"
        android:paddingEnd="@dimen/margin_default">

        <com.sungbin.androidutils.ui.TagableRoundImageView
            android:id="@+id/iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadProfile="@{Message.owner}"
            app:triv_imageRadius="@dimen/margin_twice_and_half"
            tools:src="@color/colorGreen" />

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/bg_shape_offline"
            android:contentDescription="@string/image_description_online_status"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile"
            app:loadStatus="@{Message}" />

        <View
            android:id="@+id/view_top"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/colorLightGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="2dp" />

        <!--        Apply FlexBox Layout-->

        <View
            android:id="@+id/view_horizontal_center"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/colorGreen"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            tools:layout_height="2dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_twice"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@{Message.owner.name}"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view_horizontal_center"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            tools:text="@string/user_preview_name" />

        <TextView
            android:id="@+id/tv_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_twice"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/view_horizontal_center"
            app:loadMessage="@{Message}"
            tools:drawableStartCompat="@drawable/ic_outline_photo_24"
            tools:text="@string/chat_preview_last_message" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            app:loadDate="@{Message.time}"
            tools:ignore="SmallSp"
            tools:text="@string/chat_preview_time" />

        <TextView
            android:id="@+id/tv_unread_counter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_baseline_lens_24"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:maxLength="2"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_last_message"
            app:loadUnreadCount="@{Message}"
            tools:ignore="SmallSp"
            tools:text="@string/chat_preview_unread_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>