<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by Sungbin Ji on 2021. 1. 30.
  ~ Copyright (c) 2021. Sungbin Ji. All rights reserved.
  ~
  ~ SpakChat license is under the MIT license.
  ~ SEE LICENSE: https://github.com/sungbin5304/SpakChat/blob/master/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="@dimen/margin_twice">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_dialog_welcome_back"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twice"
        android:hint="@string/register_dialog_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:startIconDrawable="@drawable/ic_outline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/register_dialog_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/til_id"
        app:startIconDrawable="@drawable/ic_outline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signin_done"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_twice"
        android:text="@string/register_dialog_signin"
        app:cornerRadius="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

</androidx.constraintlayout.widget.ConstraintLayout>