<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by Sungbin Ji on 2021. 1. 30.
  ~ Copyright (c) 2021. Sungbin Ji. All rights reserved.
  ~
  ~ SpakChat license is under the MIT license.
  ~ SEE LICENSE: https://github.com/sungbin5304/SpakChat/blob/master/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:contentDescription="@string/image_description_back"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:translationZ="90dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_description_background_image"
                    tools:src="@color/colorSky" />

                <ImageView
                    android:id="@+id/iv_edit_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:contentDescription="@string/image_description_camera"
                    android:src="@drawable/ic_outline_camera_alt_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <me.sungbin.androidutils.tagableroundimageview.TagableRoundImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/abl_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abl_container"
        app:triv_imageRadius="@dimen/margin_twice_and_half"
        tools:src="@color/colorError" />

    <ImageView
        android:id="@+id/iv_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description_camera"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile" />


</androidx.constraintlayout.widget.ConstraintLayout>